<resources>
    <string name="app_name">HoundApp</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Map</string>
    <string name="menu_map">Map</string>
    <string name="menu_me">Me</string>
    <string name="menu_vote">Vote</string>
</resources>
